--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: # the subpath of your site, e.g. /blog/
-url: "http://pastoredarchino.ch" # the base hostname & protocol for your site
+url:  # the base hostname & protocol for your site
 
 permalink: pretty 
 
