--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "http://pastoredarchino.ch/" # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
 
 permalink: pretty 
