rouge no pyments

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ sections:
 
 # BUILD SETTINGS
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 sass:
   sass_dir: _sass
   style: :compressed
