prova theme minima

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ url:  # the base hostname & protocol for your site
 permalink: pretty 
 
 # THEME-SPECIFIC CONFIGURATION
+theme: minima
 theme:
   # Meta
   title: pastore D'Archino
